--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -5,11 +5,11 @@
         {% for product in products %}
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="{{ products.image_url }}" class="card-img-top" alt="...">
+                <img src="{{ product.image_url }}" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">{{product.name}}</h5>
                   <p class="card-text">${{product.price}}</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                  <a href="#" class="btn btn-primary">Buy Now</a>
                 </div>
               </div>
         </div>
