--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,12 @@
       <!-- As a link -->
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">WELCOME!</a>
+          <!-- The following if statement prints welcome 'user' if the login was successful -->
+          {% if user.is_authenticated %}
+          <a class="navbar-brand" href="#">Welcome, {{ user.username }}!</a>
+          {% else %}
+          <a class="navbar-brand" href="#">Welcome!</a>
+          {% endif %}
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,9 +43,15 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Search products" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <!-- The following if statement enables logout of the user -->
+            {% if user.is_authenticated %}
+              <li><a class="logout scrollto" href="http://127.0.0.1:8000/logout/">Logout</a></li>
+            {% else %}
+              <li><a class="login or logout scrollto" href="http://127.0.0.1:8000/login/">Login/Sign Up</a></li>
+            {% endif %}
           </div>
         </div>
       </nav>
