implementated ability to search products by name

--- a/products/templates/login.html
+++ b/products/templates/login.html
@@ -15,4 +15,4 @@
     <input type="submit">
 </form>
 <p>Don't have an account yet?</p>
-<h4><a href="http://127.0.0.1:8000/register/">Sign Up Here</a></h4>
+<h4><a style="text-decoration: none;" href="http://127.0.0.1:8000/register/">Sign Up Here</a></h4>
