--- a/products/templates/search.html
+++ b/products/templates/search.html
@@ -56,8 +56,17 @@
         </div>
       </nav>
   <div class="container">
-    {% block content %}
-    {% endblock%}
+    {{ error }}
+
+{% if product %}
+<center><h1>Search Result Found</h1></center><br>
+{% for i in product %}
+<center><h2><a style="text-decoration: none;" href="http://127.0.0.1:8000/products/{{i.name}}">{{ i.name }}</a></h2></center>
+{% endfor %}
+
+{% else %}
+<center><h2>Sorry, No Result Found</h2></center>
+{% endif %}
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
